--- a/src/styles/variables/_typography.scss
+++ b/src/styles/variables/_typography.scss
@@ -1,22 +1,35 @@
 :root {
+  /*FONTS*/
   --font-family-main: 'Inter', sans-serif;
 
-  // font weights
-  --font-weight-regular: 400;
-  --font-weight-medium: 500;
-  --font-weight-semiBold: 600;
-  --font-weight-bold: 700;
+  /*small text*/
+  --font-size-small: 12px;
+  --font-line-small: 16px;
+  --font-small-400: 400 var(--font-size-small) / var(--font-line-small) var(--font-family-main);
+  --font-small-600: 600 var(--font-size-small) / var(--font-line-small) var(--font-family-main);
 
-  // font sizes
-  --font-size-xs: 0.75rem;
-  --font-size-s: 0.875rem;
-  --font-size-m: 1rem;
-  --font-size-l: 1.125rem;
-  --font-size-xl: 1.25rem;
-  --font-size-xxl: 1.625rem;
+  /*medium text*/
+  --font-size-medium: 14px;
+  --font-line-medium: 24px;
+  --font-medium-400: 400 var(--font-size-medium) / var(--font-line-medium) var(--font-family-main);
+  --font-medium-500: 500 var(--font-size-medium) / var(--font-line-medium) var(--font-family-main);
+  --font-medium-700: 700 var(--font-size-medium) / var(--font-line-medium) var(--font-family-main);
 
-  // line heights
-  --line-height-s: 16px;
-  --line-height-m: 24px;
-  --line-height-l: 36px;
+  /*regular text*/
+  --font-size-regular: 16px;
+  --font-line-regular: 24px;
+  --font-regular-400: 400 var(--font-size-regular) / var(--font-line-regular) var(--font-family-main);
+  --font-regular-700: 700 var(--font-size-regular) / var(--font-line-regular) var(--font-family-main);
+
+  /*H*/
+  --font-h1: 700 20px / 36px var(--font-family-main);
+  --font-h2: 700 18px / 24px var(--font-family-main);
+  --font-h3: 600 16px / 24px var(--font-family-main);
+
+  /*Large*/
+  --font-large: 600 26px / 36px var(--font-family-main);
+
+  /*links*/
+  --font-small-link: 400 var(--font-size-small) / var(--font-line-small) var(--font-family-main);
+  --font-regular-link: 400 var(--font-size-medium) / var(--font-line-medium) var(--font-family-main);
   }
