--- a/src/shared/ui/button/button.module.scss
+++ b/src/shared/ui/button/button.module.scss
@@ -1,7 +1,7 @@
 @mixin button(
   $color: var(--color-light-100),
   $bgColor: var(--color-primary-500),
-  $boxShadow: 0 4px 18px 0 rgb(140 97 255 / 35%)
+  // $boxShadow: 0 4px 18px 0 rgb(140 97 255 / 35%)
 ) {
   all: unset;
 
@@ -9,32 +9,34 @@
   user-select: none;
 
   display: inline-flex;
-  flex-shrink: 0;
+  flex-shrink: 0;                
   gap: 10px;
   align-items: center;
-
+  border-radius: 2px;
   box-sizing: border-box;
-  padding: 0.375rem 1.75rem;
-
-  font-size: var(--font-size-s);
-  font-weight: var(--font-weight-bold);
-  line-height: 24px;
-  color: $color;
+  padding:6px 24px 6px 24px;
+  font-size: var(--font-h3);
   text-decoration: none;
-
+  width: 182px;
+  height: 36px;
   background-color: $bgColor;
-  border-radius: 4px;
-  box-shadow: $boxShadow;
-
+  //padding: 0.375rem 1.75rem;
+  //font-weight: var(--font-weight-bold);
+  //line-height: 24px;
+  //color: $color;
+  //border-radius: 4px;
+  //box-shadow: $boxShadow;
+cursor: pointer;
   transition-duration: 0.3s;
 
   &:focus {
-    outline: 2px solid var(--color-outline-focus);
+    //outline: 2px solid var(--color-outline-focus); ???
+    cursor:pointer;
   }
 
   &:disabled {
     cursor: default;
-    opacity: 0.5;
+    //opacity: 0.5;???
   }
 
   &.fullWidth {
@@ -48,64 +50,105 @@
 
   &:active {
     background-color: var(--color-primary-700);
+    color: var(--color-light-500);
   }
 
   &:hover {
-    background-color: var(--color-primary-300);
+    background-color: var(--color-primary-100);
+  }
+  &:focus {
+    background-color: var(--color-primary-500);
+    border:2px solid var(--color-primary-700);
+  }
+  &:disabled {
+    background-color: var(--color-primary-900);
+    color: var(--color-light-900);
   }
 }
 
-.secondary {
+.secondary  {
   @include button(
-    $bgColor: var(--color-dark-300),
-    $boxShadow: 0 2px 10px 0 rgba(109, 109, 109, 0.25)
+    $bgColor:  var(--color-dark-500),
+    $color: var(--color-light-100),
+    //$bgColor: var(--color-dark-300),
+    //$boxShadow: 0 2px 10px 0 rgba(109, 109, 109, 0.25)
   );
 
   &:active {
-    background-color: var(--color-dark-500);
+    background-color: var(--color-primary-700);
   }
 
   &:hover {
     background-color: var(--color-dark-100);
+  }
+  &:focus {
+    background-color: var(--color-dark-300);
+    border:1px solid var(--color-primary-300)
+  }
+  &:disabled {
+    background-color: var(--color-dark-500);
+    color:var(--color-light-900)
   }
 }
 
 .outlined {
   @include button(
     $color: var(--color-primary-500),
-    $bgColor: var(--color-dark-900),
-    $boxShadow: none
+    $bgColor: var(--color-dark-700),
+    //$boxShadow: none
   );
 
   border: 1px solid var(--color-primary-500);
 
   &:active {
-    background-color: var(--color-primary-900);
-    border: 1px solid var(--color-primary-900);
+    //background-color: var(--color-primary-900);
+    border: 1px solid var(--color-primary-700);
+    color: var(--color-primary-700);
   }
 
   &:hover {
-    background-color: var(--color-dark-500);
-    border: 1px solid var(--color-primary-700);
+    //background-color: var(--color-dark-500);
+    border: 1px solid var(--color-primary-100);
+    color: var(--color-primary-100);
+  }
+
+  &:focus {
+    //background-color: var(--color-dark-300);
+    border:2px solid var(--color-primary-700);
+    color:var(--color-primary-700)
+  }
+
+  &:disabled {
+    //background-color: var(--color-dark-500);
+    border:2px solid var(--color-primary-700);
+    color:var(--color-primary-900);
+    
   }
 }
 
 .link {
-  @include button($color: var(--color-primary-500), $bgColor: none, $boxShadow: none);
+  @include button(
+    $color: var(--color-primary-500), $bgColor: none, /* $boxShadow: none */);
 
   padding: 6px 12px;
+  align-items: center;
   border: 1px solid transparent;
-  border-radius: 130px;
+  display: inline;
+  //border-radius: 130px;
 
   &:active {
     color: var(--color-primary-700);
   }
 
   &:hover {
-    color: var(--color-primary-300);
+    color: var(--color-primary-100);
   }
 
   &:focus {
-    outline: 2px solid var(--color-outline-focus);
+    outline: 2px solid var(--color-primary-500);
+    border: 2px solid var(--color-primary-500);
+  }
+  &:disabled{
+    color: var(--color-primary-900);
   }
 }
