--- a/src/shared/ui/text-area/TextArea.module.scss
+++ b/src/shared/ui/text-area/TextArea.module.scss
@@ -33,7 +33,7 @@
 
   border-radius: 2px;
   outline: none;
-  box-shadow: 0 0 0 1px var(--color-light-100);
+  border: 1px solid var(--color-dark-100);
 
   transition: 0.3s;
 
@@ -43,23 +43,25 @@
 
   &:disabled {
     color: var(--color-dark-300);
-    box-shadow: 0 0 0 1px var(--color-dark-100);
+    border:  1px solid (--color-dark-100);
   }
 
 
-  &:focus,
-  &:active:enabled {
-    box-shadow: 0 0 0 1px var(--color-primary-700);
+  
+  &:active {
+    border:  2px var(--color-light-100);
 
     &::placeholder {
       color: var(--color-dark-100);
     }
   }
-  
-
-  &:hover:not(&:disabled) {
-    background-color: var(--color-dark-700);
+  &:focus{
+    border:  2px solid var(--color-primary-700);
   }
+
+ /*  &:hover:not(&:disabled) {
+    background-color: var(--color-dark-700);
+  } */
 
   &.error {
     color: var(--color-danger-300);
