--- a/src/shared/ui/typography/typography.module.scss
+++ b/src/shared/ui/typography/typography.module.scss
@@ -15,11 +15,12 @@
 }
 
 .h1 {
-  @include typography(
+ /* @include typography(
     $fs: var(--font-size-xl),
     $lh: var(--line-height-l),
     $fw: var(--font-weight-bold)
-  );
+  );*/
+  font: var(--font-h1);
 }
 
 .h2 {
