--- a/src/pages/sign-up/SignUp.module.scss
+++ b/src/pages/sign-up/SignUp.module.scss
@@ -3,6 +3,8 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
+  //margin-top: 24px;
+
 }
 
 
@@ -51,8 +53,18 @@
     text-align: left;
   }
 
+  .privacyBlock {
+    display: flex;
+    margin-top: 1.38rem;
+    .privacyText {
+      padding-left:8px;
+      display: flex;
+      align-items: center;
+  }
+  }
+
   .registerBtn {
-    margin-top: 3.75rem;
+    margin-top: 1.38rem;
   }
 
   .subtitle {
@@ -63,5 +75,8 @@
   .link {
     color: var(--color-primary-500);
     text-decoration: underline;
+  }
+  .sizeText {
+    font-size: 12px;
   }
 }
