--- a/src/components/Header/styles.module.css
+++ b/src/components/Header/styles.module.css
@@ -2,35 +2,55 @@
     position: relative;
     display: flex;
     justify-content: space-between;
-    padding: 20px;
-    height: 60px;
+    padding: 30px;
+    height: 10px;
     /* background-color: #000000; */
     background-color:#0D0D0D;
-    border-bottom: 1px solid #645f5f;
+    border-bottom: 1px solid var(--color-dark-100);
   }
-  
+
   .text, .languageSelector, .notificationIcon {
     display: flex;
     align-items: center;
   }
-  
+
   .text {
     justify-content: flex-start;
-    flex-grow: 1;
+    /*flex-grow: 1;*/
     font-size: 24px;
-    padding-left: 50px;
   }
-  
 
-  
+
+
   .languageSelector {
     justify-content: flex-end;
-    padding-right: 70px; 
   }
 
-  
-  
+   @media screen and (min-width: 425px) {
+       .dots {
+           display: none;
+       }
+   }
+
   .notificationIcon {
-    position: absolute;
-    right: 350px;
-  }  
+    position: relative;
+    right: 35px;
+  }
+  @media screen and (max-width: 425px) {
+      .notificationIcon {
+          display: none;
+      }
+      .header{
+          display: flex;
+      }
+      .dots {
+          margin-left: 20px;
+      }
+  }
+  .dotsIcon{
+      display:flex;
+      align-items:center;
+  }
+   .icon{
+       margin-right: 10px;
+   }
