--- a/src/components/ImageEditor/ImageEditor.module.scss
+++ b/src/components/ImageEditor/ImageEditor.module.scss
@@ -1,30 +1,77 @@
 
 .currentImageField {
-    position: relative;
-    background-color: aquamarine;
     display: flex;
     flex-direction: column;
-    padding: 12px;
     align-items: flex-end;
+    width: 486px;
+    padding: 12px;
 
-    & img {
+     img {
         width: 460px;
         height: 460px;
-        object-fit: contain;
-    }
+        object-fit: contain
+    }  
 }
 
 .container {
     display: flex;
-    gap: 16px;
-    max-width: 900px;
+    max-width: 972px
 
-    & .slider,
-    & .filters{
-        flex: 1 50%;
+}
+
+.right {
+    width: 486px
+}
+
+.publicationDescriptionBlock {
+    display: flex;
+    flex-direction: column;
+    margin: 24px;
+
+    .user {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        margin-bottom: 28px
     }
 
-    & .slider{
-        position: relative;
+    .user img {
+        width: 36px;
+        height: 36px;
+        margin-right: 12px;
+        border: 1px solid var(--color-primary-500); // TODO DELETE
+        border-radius: 50%
     }
+}
+
+.form {
+    label p {
+        color: var(--color-light-900)
+    }
+
+    textarea {
+        background-color: var(--color-dark-500)
+    }
+
+    input {
+        margin-bottom: 10px ;
+        background-color: var(--color-dark-500)
+    }
+
+    .symbolsCounter {
+        right: 0;
+        color: var(--color-light-900);
+        text-align: right
+    }
+}
+
+// TODO DELETE
+.buttonForTest {
+    margin: 20px;
+    padding: 10px;
+    background-color: var(--color-primary-500)
+}
+
+.buttonForTest:hover {
+    cursor: pointer
 }
