--- a/src/components/ImageEditor/Navbar/ImageNavbar.module.scss
+++ b/src/components/ImageEditor/Navbar/ImageNavbar.module.scss
@@ -1,45 +1,45 @@
 .currentImageManager {
-    align-items:flex-end;
-    width: 100%;
-    height: 36px;
-    align-items: center;
-    display: flex;
-    gap: 10px;
-    //left: 30px;
-    padding:  0 24px;
+    position: absolute;
+    right: 0;
     bottom: 24px;
     left: 0;
-    right: 0;
-    position: absolute;
-    //justify-content: space-between;
+    display: flex;
+    gap: 10px;
+    align-items:flex-end;
+    align-items: center;
+    width: 100%;
+    height: 36px;
+    padding:  0 24px
 }
+
 .imageManagerButton {
+    z-index: 100;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 36px;
     height: 100%;
-    border-radius: 2px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: color .3s ease;
     font-size: 24px;
-    z-index: 100;
+    border-radius: 2px;
+    transition: color .3s ease;
 
-    &::after{
-        content: '';
+    &::after {
         position: absolute;
-        background-color: var(--color-dark-500);
+        z-index: -1;
         width: 36px;
         height: 100%;
+        background-color: var(--color-dark-500);
         border-radius: 2px;
         opacity:.8;
-        z-index: -1;
+        content: ''
     }
 
-    &:hover  {
-        color: var(--color-primary-500);
+    &:hover {
+        color: var(--color-primary-500)
         
     }
 }
+
 .imageManagerButton:last-child {
     margin-left: auto
 }
