--- a/src/components/ImageEditor/NavbarItems/Crop/ImageCrop.module.scss
+++ b/src/components/ImageEditor/NavbarItems/Crop/ImageCrop.module.scss
@@ -1,60 +1,60 @@
 .items {
-    padding: 10px 12px;
     position: absolute;
     bottom: 38px;
+    z-index: 100;
     display: flex;
     flex-direction: column;
     gap: 12px;
+    padding: 10px 12px;
     color:  var(--color-light-900);
-    z-index: 100;
 
-    &::before{
-        content: '';
-        border-radius: 2px;
+    &::before {
         position: absolute;
         top:0;
         left:0;
-        opacity:.8;
-        background-color: var(--color-dark-500);
+        z-index: -1;
         width:100%;
         height: 100%;
-        z-index: -1;
+        background-color: var(--color-dark-500);
+        border-radius: 2px;
+        opacity:.8;
+        content: ''
     }
 
     button {
         display: flex;
-        min-width: 130px;
         align-items: center;
         justify-content: space-between;
+        min-width: 130px;
         transition: all .3s;
 
         &:hover {
-            color: var(--color-light-100);
+            color: var(--color-light-100)
         }
 
         &:hover span[class*='icon__'] {
-            border: 2px solid var(--color-light-100);
+            border: 2px solid var(--color-light-100)
         }
-
+ 
         .icon__one_to_one {
             width: 12px;
             height: 12px;
-            border-radius: 2px;
             border: 2px solid var(--color-light-900);
+            border-radius: 2px
         }
 
         .icon__four_to_five {
             width: 12px;
             height: 18px;
-            border-radius: 2px;
             border: 2px solid var(--color-light-900);
+            border-radius: 2px
         }
 
         .icon__sixteen_to_nine {
             width: 18px;
             height: 12px;
-            border-radius: 2px;
             border: 2px solid var(--color-light-900);
+            border-radius: 2px
         }
     }
 }
