--- a/src/components/ImageEditor/NavbarItems/Gallery/ImageGallery.module.scss
+++ b/src/components/ImageEditor/NavbarItems/Gallery/ImageGallery.module.scss
@@ -1,139 +1,142 @@
-.imageGalleryUploader{
+.imageGalleryUploader {
     position: absolute;
-    bottom: 38px;
     right: 24px;
-    padding: 10px;
-    max-width: 452px;
-    z-index: 100;
+    bottom: 38px;
+    z-index: 200;
+    max-width: 438px;
 
-    &::before{
-        content: '';
-        border-radius: 2px;
+    &::before {
         position: absolute;
         top:0;
         left:0;
-        opacity:.8;
-        background-color: var(--color-dark-500);
+        z-index: -1;
         width:100%;
         height: 100%;
-        z-index: -1;
+        background-color: var(--color-dark-500);
+        border-radius: 2px;
+        opacity:.8;
+        content: ''
+    }
+}
+
+.galleryContainer {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    align-items: center;
+    justify-content: center;
+    padding-right: 10px;
+
+    p {
+        padding: 0 7px;
+        color: var(--color-light-100);
+        font: var(--font-h1);
+        line-height: 1.546;
+        border: 2px solid var(--color-light-100);
+        border-radius: 50%
     }
 
-    .galleryContainer{
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        gap: 30px;
-    
-    & button {
-        background-color: transparent;
+    button {
         padding: 0;
-    }
-    & button:hover label p {
-        border-color: var(--color-primary-500);
-        color: var(--color-primary-500);
-        
-    }
-        & .btn{
-            padding: 0;
-            border: none;
+        background-color: transparent;
+        border: 0;
+
+        &:focus,
+        &:hover {
             background: transparent;
+            border: 0
         }
-        & label p{
-            font: var(--font-h1);
-            color: var(--color-light-100);
-            border-radius: 50%;
-            padding: 0 12px;
-            border: 2px solid var(--color-light-100);
+
+        &:hover p {
+            color: var(--color-primary-500);
+            border-color: var(--color-primary-500)
         }
-        & input{
-            display: none;
+    }
+}
+
+.images {
+    display: inline-flex;
+    flex: 0 400px;
+    gap:6px;
+    padding: 8px;
+    overflow-x: auto;
+    overflow-y: hidden;
+    text-align: center;
+    background-color: rgb(var(--color-dark-500) .8);
+    border-radius: 2px;
+
+    .icon__close {
+        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 10px;
+        height: 10px;
+
+        &::before,
+        &::after {
+                position: absolute;
+                width: 1px;
+                height: 8px;
+                background-color: #fff;
+                transition: background-color .3s;
+                content: ''
         }
-    
-        .images{
-            display: inline-flex;
-            flex: 0 400px;
-            gap:6px;
+
+        &::before {
+            transform: rotate(45deg)
+        }
+
+        &::after {
+            transform: rotate(-45deg)
+        }
+    }
+}
+
+.image {
+    position: relative;
+    flex:0 124px;
+    height: 82px;
+
+    img {
+        width: 124px;
+        max-width: 124px;
+        height: 100%;
+        object-fit: contain
+    }
+
+    &_close {
+        position: absolute;
+        top: -5px;
+        right: -5px;
+        z-index: 100;
+        padding: 3px;
+        color: var(--color-light-100);
+        background-color: transparent;
+        border: 0;
+        border-radius: 2px;
+        transition: all .3s;
+
+        &:hover {
+            color: var(--color-primary-500)
+        }
+
+        &:hover .icon__close::before, 
+        &:hover .icon__close::after {
+            background-color: var(--color-primary-500)
+        }
+
+        &::before {
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: -1;
+            width: 100%;
+            height: 100%;
+                background-color: var(--color-dark-500);
             border-radius: 2px;
-            padding: 8px;
-            overflow-y: hidden;
-            overflow-x: auto;
-            text-align: center;
-            background-color: rgba(var(--color-dark-500), .8);
-    
-            &__image{
-                flex:0 124px;
-                height: 82px;
-                position: relative;
-    
-                img {
-                    width: 124px;
-                    max-width: 124px;
-                    height: 100%;
-                    object-fit: contain;
-                }
-    
-                &_close {
-                    position: absolute;
-                    top: -5px;
-                    right: -5px;
-                    padding: 3px;
-                    border: none;
-                    border-radius: 2px;
-                    background-color: transparent;
-                    color: var(--color-light-100);
-                    z-index: 100;
-                    transition: all .3s;
-    
-                    &:hover {
-                        color: var(--color-primary-500);
-                    }
-    
-                    &:hover .icon__close::before, 
-                    &:hover .icon__close::after {
-                        background-color: var(--color-primary-500);
-                    }
-    
-                    &::before{
-                        content: '';
-                            background-color: var(--color-dark-500);
-                        opacity: .6;
-                        border-radius: 2px;
-                        z-index: -1;
-                        top: 0;
-                        left: 0;
-                        width: 100%;
-                        height: 100%;
-                        position: absolute;
-                    }
-    
-                 & .icon__close {
-                    position: relative;
-                    width: 10px;
-                    height: 10px;
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-    
-                        &:before, &:after {
-                            height: 8px;
-                            width: 1px;
-                            content: '';
-                            position: absolute;
-                            background-color: #fff;
-                            transition: background-color .3s;
-                            }
-                            &:before {
-                            transform: rotate(45deg);
-                            }
-                            &:after {
-                            transform: rotate(-45deg);
-                            }
-    
-                    }
-                }
-            }
+            opacity: .6;
+            content: ''
         }
     }
 }
