--- a/src/components/ImageSlider/ImagesSlider.module.scss
+++ b/src/components/ImageSlider/ImagesSlider.module.scss
@@ -1,15 +1,25 @@
 .slider {
+    position: relative;
+
+
     &__list {
         display: flex;
         overflow: hidden;
         align-items: center;
         scroll-snap-type: x mandatory;
         scroll-behavior: smooth;
+        //width: 560px;
+        gap: 2px;
     }
 
     &__item {
         flex: 1 0 100%;
         scroll-snap-align: start;
+
+        & canvas {
+            display: inline;
+            width: 100%;
+        }
     }
 
     &__image {
@@ -46,5 +56,47 @@
             }
         }
     }
+    .prevBtn, 
+    .nextBtn {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        border-radius: 2px;
+        z-index: 100;
+        padding: 6px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+
+        &::before, 
+        &::before{
+            background-color: var(--color-dark-500);
+            opacity: .8;
+            border-radius: 2px;
+            content:'';
+            position: absolute;
+            z-index: -1;
+            width: 100%;
+            height: 100%;
+        }
+        & span {
+            font-size: 24px;
+            text-align: center;
+            transition: color .3s linear;
+        }
+        & span:hover{
+            color: var(--color-primary-500);
+        }
+        
+    }
+     
+    .prevBtn{
+        left: 12px;
+    }
+    .nextBtn{
+        right: 12px;
+    }
+    
 
 }
