--- a/src/shared/ui/button/button.module.scss
+++ b/src/shared/ui/button/button.module.scss
@@ -25,7 +25,6 @@
   //color: $color;
   //border-radius: 4px;
   //box-shadow: $boxShadow;
-cursor: pointer;
   transition-duration: 0.3s;
 
   &:focus {
@@ -93,27 +92,24 @@ cursor: pointer;
 .outlined {
   @include button(
     $color: var(--color-primary-500),
-    $bgColor: var(--color-dark-700),
+    $bgColor: transparent
     //$boxShadow: none
   );
 
   border: 1px solid var(--color-primary-500);
-
+  color: var(--color-primary-500);
   &:active {
-    //background-color: var(--color-primary-900);
     border: 1px solid var(--color-primary-700);
     color: var(--color-primary-700);
   }
 
   &:hover {
-    //background-color: var(--color-dark-500);
     border: 1px solid var(--color-primary-100);
     color: var(--color-primary-100);
   }
 
   &:focus {
     //background-color: var(--color-dark-300);
-    
     border:1px solid var(--color-primary-700);
     color:var(--color-primary-700)
   }
