--- a/src/shared/ui/modal/Modal.module.scss
+++ b/src/shared/ui/modal/Modal.module.scss
@@ -21,8 +21,8 @@
   transform: translate(-50%, -50%);
   min-width: 378px;
   min-height: 228px;
-  max-width: 450px;
-  max-height: 85vh;
+  //max-width: 450px;
+  //max-height: 85vh;
   animation: contentShow 150ms cubic-bezier(0.16, 1, 0.3, 1);
 }
 
@@ -43,6 +43,10 @@
   padding: 12px 24px;
   height: 100%;
 }
+.DialogDescription_postModal{
+  padding: 0;
+  flex-direction: row;
+}
 
 .Button {
   display: inline-flex;
@@ -60,8 +64,14 @@
   width: 24px;
   height: 24px;
   padding: 0;
-  background-color: var(--color-dark-300);
+  background-color: transparent;
   box-shadow: none;
+  border: none;
+  align-self: center;
+  &:active, &:focus, &:hover  {
+    background-color: var(--color-dark-100);
+  }
+
 }
 .okBtn {
 
@@ -86,23 +96,3 @@
   box-shadow: 0 0 0 2px var(--violet-7);
 }
 
-
-@keyframes overlayShow {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
-@keyframes contentShow {
-  from {
-    opacity: 0;
-    transform: translate(-50%, -48%) scale(0.96);
-  }
-  to {
-    opacity: 1;
-    transform: translate(-50%, -50%) scale(1);
-  }
-}
