--- a/src/shared/ui/select/Select.module.scss
+++ b/src/shared/ui/select/Select.module.scss
@@ -23,11 +23,16 @@
   padding: 0 15px;
   font: var(--font-regular-16);
   height: 36px;
-  width: 210px;
+  width: 150px;
   gap: 5px;
   background-color: var(--color-dark-700);
   color: var(--color-light-100);
   box-shadow: 0 2px 10px var(--black-a7);
+}
+@media screen and (max-width: 425px) {
+  .SelectTrigger{
+    width: 75px;
+  }
 }
 
 .SelectTrigger:hover {
@@ -58,7 +63,7 @@
   background-color: var(--color-dark-500);
   border: var(--color-light-100) 1px solid;
   border-radius: 2px;
-  box-shadow: 0px 10px 38px -10px rgba(22, 23, 24, 0.35), 0px 10px 20px -15px rgba(22, 23, 24, 0.2);
+  box-shadow: 0 10px 38px -10px rgba(22, 23, 24, 0.35), 0px 10px 20px -15px rgba(22, 23, 24, 0.2);
 }
 
 .SelectViewport {
