--- a/src/components/profileSettings/account-management/activeSubscriptions/ActiveSubscriptions.module.scss
+++ b/src/components/profileSettings/account-management/activeSubscriptions/ActiveSubscriptions.module.scss
@@ -2,15 +2,16 @@
   margin-bottom: 18px;
   font-size: var(--font-h3)
 }
-
-.activeSubscriptionsList {
-  display: flex;
-  gap: 48px;
+.activeSubscriptions{
   width: 100%;
   margin-bottom: 19px;
   padding: 12px 24px;
   background-color: var(--color-dark-500);
   border: 1px solid var(--color-dark-300)
+}
+.activeSubscriptionsList {
+  display: flex;
+  gap: 48px
 }
 
 .activeSubscriptionHeader {
@@ -20,4 +21,11 @@
 
 .activeSubscriptionValue {
   font: var(--font-regular-bold)
+}
+
+.activeSubscriptionCheckbox{
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 10px
 }
