--- a/src/components/ImageSlider/ImagesSlider.module.scss
+++ b/src/components/ImageSlider/ImagesSlider.module.scss
@@ -37,17 +37,6 @@
     transform: translateX(-50%);
 
     &__item {
-      .btn {
-        display: inline-block;
-        width: 8px;
-        height: 8px;
-        background-color: var(--color-light-100);
-        border-radius: 50%;
-
-        &_active {
-          background-color: var(--color-primary-500)
-        }
-      }
     }
   }
 
@@ -96,4 +85,86 @@
   }
 
 
+}
+
+.sliders {
+  max-width: 480px;
+  position: relative;
+
+  .bullets {
+    position: absolute;
+    bottom: 30px;
+    left: 50%;
+    z-index: 20;
+    display: inline-flex;
+    gap: 12px;
+    align-items: center;
+    justify-content: center;
+    padding: 8px;
+    line-height: 0;
+    background: rgba(#333, .5);
+    border-radius: 2px;
+    transform: translateX(-50%);
+  }
+  .btn {
+    display: inline-block;
+    width: 8px;
+    height: 8px;
+    background-color: var(--color-light-100);
+    border-radius: 50%;
+
+    &_disabled{
+      opacity: 0;
+      visibility: hidden;
+    }
+
+    &_active {
+        background-color: var(--color-primary-500)
+      }
+    }
+
+  .prevBtn,
+  .nextBtn {
+    position: absolute;
+    top: 50%;
+    z-index: 100;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 2px;
+    transform: translateY(-50%);
+    width: 48px;
+    height: 48px;
+
+    &::before {
+      position: absolute;
+      z-index: -1;
+      width: 100%;
+      height: 100%;
+      background-color: var(--color-dark-300);
+      border-radius: 2px;
+      opacity: .8;
+      content: ''
+    }
+
+    span {
+      font-size: 40px;
+      line-height: 1;
+      text-align: center;
+      transition: color .3s linear
+    }
+
+    span:hover {
+      color: var(--color-primary-500)
+    }
+
+  }
+
+  .prevBtn {
+    left: 12px
+  }
+
+  .nextBtn {
+    right: 12px
+  }
 }
