--- a/src/components/ImageSlider/ImagesSlider.module.scss
+++ b/src/components/ImageSlider/ImagesSlider.module.scss
@@ -105,6 +105,10 @@
     background: rgba(#333, .5);
     border-radius: 2px;
     transform: translateX(-50%);
+
+    &_hidden{
+      display: none
+    }
   }
   .btn {
     display: inline-block;
