--- a/src/shared/ui/button/button.module.scss
+++ b/src/shared/ui/button/button.module.scss
@@ -5,6 +5,7 @@
   display: inline-flex;
   flex-shrink: 0;
   align-items: center;
+  justify-content: center;
   box-sizing: border-box;
   padding: 6px 24px;
   color: $color;
