--- a/src/components/Layout/WithSidebarLayout/WithSidebarLayout.module.scss
+++ b/src/components/Layout/WithSidebarLayout/WithSidebarLayout.module.scss
@@ -1,3 +1,5 @@
+@import '/src/styles/variables/mixins';
+
 .container {
     display: flex;
 }
@@ -12,9 +14,9 @@
         margin-left: 80px
     }
 }
-
-@media screen and (max-width: 425px) {
+@include mq(mobile){
     .page {
         margin-left: 0
     }
 }
+
