--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -1,18 +1,22 @@
+@import '/src/styles/variables/mixins';
+
 .container {
-  max-width: 220px;
-  padding: 0 40px;
   position: fixed;
+  top: 60px;
   bottom: 0;
   left: 0;
-  top: 60px;
+  max-width: 220px;
+  padding: 0 40px;
   border-right: 1px solid var(--color-dark-100);
+  z-index: 10000;
 
   .sidebarRoutes {
     display: flex;
     flex-direction: column;
-    overflow-y: auto;
     height: 100%;
     padding: 16px 0;
+    overflow-y: auto;
+
 
     .wrapper {
       display: flex;
@@ -28,6 +32,16 @@
         & {
           align-items: center
         }
+        
+      }
+      @include mq(mobile) {
+        & {
+            flex-direction: row;
+            justify-content: space-around;
+            background-color: var(--color-dark-700);
+            border-top: 1px solid var(--color-dark-100);
+        }
+        
       }
 
       span {
@@ -39,45 +53,71 @@
           }
         }
       }
+      
+    }
+    .wrapperAdditionalInformationLogOut {
+        @include mq(mobile) {
+            & {
+              display: none
+            }
+          }
     }
 
-    .route {
+
+    @include mq(mobile) {
+        & {
+        padding: 0;
+        width: 100%;
+        }
+      }
+      .route {
       display: flex;
-      color:inherit;
       flex-direction: row;
       align-items: center;
       justify-content: center;
       padding: 0;
+      color: inherit;
 
       &_active {
+
         color: var(--color-primary-500);
     }
-    }
-    
-    /*
-    .footer {
-      position: fixed;
-      bottom: 0;
-      left: 50px;
-      margin-top: 150px
-    }
-    */
+}
+
   }
+  
 
   @media (max-width: 991.98px) {
+
     & {
-      padding: 0 16px;
       align-items: center;
+      padding: 0 16px
+  } 
+}
+
+@include mq(mobile) {
+    & {
+        top: auto;
+        border-right: none;
+        padding: 0;
+        right: 0;
+        left: 0;
+        max-width: 100%;
+      }
+}
+ 
+    
+  
+}
+
+@include mq(mobile) {
+    .inVisibleMenu{
+        display: none;
     }
   }
-}
-
-@media screen and (max-width: 425px) {
-  .container {
-    display: none
-  }
-}
 
 .btn {
-  color:var(--color-light-100)
+  color: var(--color-light-100)
 }
+
+
