--- a/src/components/profileSettings/account-management/customPaymentBtn/CustomPaymentBtn.module.scss
+++ b/src/components/profileSettings/account-management/customPaymentBtn/CustomPaymentBtn.module.scss
@@ -34,9 +34,9 @@
   font: var(--font-regular-14)
   
 }
-@include mq(mobile){
+@include mq(mobile) {
     .checkoutFormButtons {
-        justify-content: center;
+        justify-content: center
       }
 }
 
