--- a/src/styles/variables/_mixins.scss
+++ b/src/styles/variables/_mixins.scss
@@ -51,6 +51,6 @@ $breakpoints: (
 @mixin mq($name) {
     $max: map-get($breakpoints, $name);
     @media (max-width: $max) {
-      @content;
+      @content
     }
 }
