--- a/src/components/ImageSlider/ImagesSlider.module.scss
+++ b/src/components/ImageSlider/ImagesSlider.module.scss
@@ -88,8 +88,8 @@
 }
 
 .sliders {
-  max-width: 480px;
   position: relative;
+  max-width: 480px;
 
   .bullets {
     position: absolute;
@@ -107,11 +107,12 @@
     transform: translateX(-50%);
 
 
-    &_hidden{
+    &_hidden {
       display: none
     }
 
   }
+
   .btn {
     display: inline-block;
     width: 8px;
@@ -119,9 +120,9 @@
     background-color: var(--color-light-100);
     border-radius: 50%;
 
-    &_disabled{
-      opacity: 0;
+    &_disabled {
       visibility: hidden;
+      opacity: 0
     }
 
     &_active {
@@ -137,10 +138,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    border-radius: 2px;
-    transform: translateY(-50%);
     width: 48px;
     height: 48px;
+    border-radius: 2px;
+    transform: translateY(-50%);
 
     &::before {
       position: absolute;
@@ -153,7 +154,7 @@
       content: ''
     }
 
-    span {
+    &span {
       font-size: 40px;
       line-height: 1;
       text-align: center;
