--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -5,10 +5,10 @@
   top: 60px;
   bottom: 0;
   left: 0;
+  z-index: 10000;
   max-width: 220px;
   padding: 0 40px;
   border-right: 1px solid var(--color-dark-100);
-  z-index: 10000;
 
   .sidebarRoutes {
     display: flex;
@@ -29,47 +29,38 @@
       }
 
       @media (max-width: 991.98px) {
-        & {
           align-items: center
-        }
-        
       }
       @include mq(mobile) {
-        & {
             flex-direction: row;
             justify-content: space-around;
             background-color: var(--color-dark-700);
-            border-top: 1px solid var(--color-dark-100);
-        }
-        
+            border-top: 1px solid var(--color-dark-100)
+
       }
 
       span {
         margin-left: 15px;
 
         @media (max-width: 991.98px) {
-          & {
             display: none
-          }
         }
       }
       
     }
+
     .wrapperAdditionalInformationLogOut {
         @include mq(mobile) {
-            & {
               display: none
-            }
           }
     }
 
 
     @include mq(mobile) {
-        & {
-        padding: 0;
         width: 100%;
-        }
+        padding: 0
       }
+
       .route {
       display: flex;
       flex-direction: row;
@@ -79,8 +70,7 @@
       color: inherit;
 
       &_active {
-
-        color: var(--color-primary-500);
+        color: var(--color-primary-500)
     }
 }
 
@@ -88,22 +78,17 @@
   
 
   @media (max-width: 991.98px) {
-
-    & {
       align-items: center;
       padding: 0 16px
-  } 
 }
 
 @include mq(mobile) {
-    & {
         top: auto;
-        border-right: none;
-        padding: 0;
         right: 0;
         left: 0;
         max-width: 100%;
-      }
+        padding: 0;
+        border-right: 0
 }
  
     
@@ -111,8 +96,8 @@
 }
 
 @include mq(mobile) {
-    .inVisibleMenu{
-        display: none;
+    .inVisibleMenu {
+        display: none
     }
   }
 
