--- a/src/components/Table/Table.module.scss
+++ b/src/components/Table/Table.module.scss
@@ -1,22 +1,23 @@
 .table {
-    &__head{
-        background-color: var(--color-dark-500);
+    &__head {
+        background-color: var(--color-dark-500)
     }
+
     &__th {
-        text-align: left;
+        text-align: left
     }
+
     th,
     td,
-    &__tr{
-        padding: 12px;
+    &__tr {
+        padding: 12px
     }
 
 }
 
 .cell {
-
     &__th {
-        display: none;
+        display: none
     }
 }
 
@@ -30,21 +31,21 @@
 
         &__body {
             display: flex;
-            gap: 12px;
             flex-direction: column;
+            gap: 12px
         }
 
-        &__tr{
+        &__tr {
             display: flex;
-            gap: 10px;
             flex-direction: column;
+            gap: 10px;
             background-color: var(--color-dark-500);
-            border-radius:2px;
-            border:1px solid var(--color-dark-300)
+            border:1px solid var(--color-dark-300);
+            border-radius:2px
         }
 
-        td{
-            padding: 0;
+        td {
+            padding: 0
         }
     }
 
@@ -54,7 +55,7 @@
         justify-content: space-between;
 
         &__th {
-            display: block;
+            display: block
         }
 
         &__td {
