--- a/src/components/TimesAgoFormatter/TimesAgoFromatter.module.scss
+++ b/src/components/TimesAgoFormatter/TimesAgoFromatter.module.scss
@@ -3,7 +3,7 @@
     line-height: 36px;
 
     .dot {
-        color: var(--color-light-100);
-        padding: 0 8px 0 5px
+        padding: 0 8px 0 5px;
+        color: var(--color-light-100)
     }
 }
