--- a/src/shared/ui/popover/Popover.module.css
+++ b/src/shared/ui/popover/Popover.module.css
@@ -7,7 +7,7 @@
     box-shadow: hsl(206deg 22% 7% / .35) 0 10px 38px -10px, hsl(215deg 11% 70% / .2) 0 10px 20px -15px;
     animation-duration: 400ms;
     animation-timing-function: cubic-bezier(.16, 1, .3, 1);
-    will-change: transform, opacity;
+    will-change: transform, opacity
 }
 
 .PopoverContent:focus {
@@ -37,6 +37,7 @@
 .PopoverArrow {
     fill: var(--color-light-100)
 }
+
 .PopoverClose {
     position: absolute;
     top: 5px;
@@ -48,7 +49,7 @@
     height: 25px;
     color: var(--color-primary-900);
     font-family: inherit;
-    border-radius: 100%;
+    border-radius: 100%
 }
 
 .PopoverClose:hover {
